After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751995 - JNI: jaw_table_set_caption is missing
JNI: jaw_table_set_caption is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other All
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-05 21:32 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-06 11:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wrapper: Create setCaption in AtkTable (997 bytes, patch)
2015-07-05 21:36 UTC, Magdalen Berns (irc magpie)
committed Details | Review
JNI: Create jaw_table_set_caption (2.18 KB, patch)
2015-07-05 21:46 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Update HACKING (730 bytes, patch)
2015-07-05 21:49 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-05 21:32:51 UTC
a jaw_table_set_caption function should implement the AtkTable interface pointer set_caption but it doesn't.[1]

[1] https://git.gnome.org/browse/atk/tree/atk/atktable.h#n75
Comment 1 Magdalen Berns (irc magpie) 2015-07-05 21:36:57 UTC
Created attachment 306875 [details] [review]
Wrapper: Create setCaption in AtkTable

Relevant java implementation.
Comment 2 Magdalen Berns (irc magpie) 2015-07-05 21:46:38 UTC
Created attachment 306876 [details] [review]
JNI: Create jaw_table_set_caption
Comment 3 Magdalen Berns (irc magpie) 2015-07-05 21:49:05 UTC
Created attachment 306877 [details] [review]
Update HACKING