JNI: Create jaw_table_set_caption

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=751995