jni/src/jawtable.c
@@ -56,6 +56,7 @@ static void         jaw_table_set_column_description(AtkTable *table,
                                                      const gchar *description);
 static void         jaw_table_set_row_header(AtkTable *table, gint row, AtkObject *header);
 static void         jaw_table_set_column_header(AtkTable *table, gint column, AtkObject *header);
+static void         jaw_table_set_caption(AtkTable *table, AtkObject *caption);
 
 typedef struct _TableData {
   jobject atk_table;
@@ -91,6 +92,7 @@ jaw_table_interface_init (AtkTableIface *iface)
   iface->set_column_description = jaw_table_set_column_description;
   iface->set_row_header = jaw_table_set_row_header;
   iface->set_column_header = jaw_table_set_column_header;
+  iface->set_caption = jaw_table_set_caption;
 }
 
 gpointer
@@ -607,4 +609,20 @@ jaw_table_set_column_header(AtkTable *table, gint column, AtkObject *header)
                                        "setColumnHeader",
                                        "(ILjavax/accessibility/AccessibleTable;)V");
   (*env)->CallVoidMethod(env, atk_table, jmid, (jint)column, (jobject)header);
+}
+
+static void
+jaw_table_set_caption(AtkTable *table, AtkObject *caption)
+{
+  JawObject *jaw_obj = JAW_OBJECT(table);
+  TableData *data = jaw_object_get_interface_data(jaw_obj, INTERFACE_TABLE);
+  jobject atk_table = data->atk_table;
+
+  JNIEnv *env = jaw_util_get_jni_env();
+  jclass classAtkTable = (*env)->FindClass(env, "org/GNOME/Accessibility/AtkTable");
+  jmethodID jmid = (*env)->GetMethodID(env,
+                                       classAtkTable,
+                                       "setCaption",
+                                       "(Ljavax/accessibility/Accessible;)V");
+  (*env)->CallVoidMethod(env, atk_table, jmid, (jobject)caption);
 }
